<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/place_edit_name"
            android:textSize="@dimen/font_size_normal"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editText_name"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:background="@drawable/edit_bg"

            tools:inputType="textMultiLine" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_size_normal"
            android:textStyle="bold"
            android:text="@string/place_edit_showworld" />

        <Switch
            android:id="@+id/switch_show"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:checked="false"
            android:textOff="@string/no"
            android:textOn="@string/yes"
             />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/place_edit_icon"
                android:textSize="@dimen/font_size_normal"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView_iconname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/place_edit_iconname" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imageView_select"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:contentDescription="@null"
            android:src="@drawable/star_red"
            tools:alpha="255" />

    </RelativeLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:orientation="vertical">
        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_size_normal"
            android:textStyle="bold"
            android:text="@string/place_edit_position" />

        <TextView
            android:id="@+id/textView_placeposition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/place_edit_position" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_size_normal"
            android:textStyle="bold"
            android:text="@string/place_edit_content" />

        <EditText
            android:id="@+id/editText_content"
            android:layout_width="match_parent"
            android:layout_height="@dimen/table_row_height"
            android:inputType="textMultiLine"
            android:background="@drawable/edit_bg"

            android:text="" />

    </LinearLayout>

    <Button
        android:id="@+id/button_saveplace"
        android:layout_margin="@dimen/default_margin"
        android:background="@color/color_control_background"
        android:textColor="@color/colorWhite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/place_edit_save" />


</LinearLayout>